[gd_scene load_steps=15 format=3 uid="uid://dlw6ijmn0klvj"]

[ext_resource type="PackedScene" uid="uid://dycvjsyhm3obh" path="res://scenes/level/level.tscn" id="1_0077t"]
[ext_resource type="Script" path="res://scenes/level/base_room_1.gd" id="2_iic3o"]
[ext_resource type="TileSet" uid="uid://cx7nxglpy1f1v" path="res://scenes/level/base_room_1.tres" id="3_6l220"]
[ext_resource type="PackedScene" uid="uid://fv4t1le7meyh" path="res://scenes/objects/simple_torch.tscn" id="7_k1tol"]
[ext_resource type="PackedScene" uid="uid://j41s4c5oc3wi" path="res://scenes/objects/side_torch_r.tscn" id="8_bcd0c"]
[ext_resource type="PackedScene" uid="uid://obwlngvpff0t" path="res://scenes/container/box.tscn" id="8_ehv71"]
[ext_resource type="PackedScene" uid="uid://6diqfbed0kqj" path="res://scenes/objects/side_torch_l.tscn" id="9_s5u2l"]
[ext_resource type="FontFile" uid="uid://bxdpuk7bx0dnu" path="res://graphics/UI/PublicPixel-E447g.ttf" id="9_xa684"]
[ext_resource type="PackedScene" uid="uid://bj0068kkce64r" path="res://scenes/objects/front_door.tscn" id="12_k83or"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6spuf"]
size = Vector2(152, 126)

[sub_resource type="LabelSettings" id="LabelSettings_sjnj5"]
font = ExtResource("9_xa684")
font_size = 14

[sub_resource type="Animation" id="Animation_60fkm"]
resource_name = "Start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_lvm13"]
resource_name = "Text"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fwjkc"]
_data = {
"Start": SubResource("Animation_60fkm"),
"Text": SubResource("Animation_lvm13")
}

[node name="BaseRoom1" instance=ExtResource("1_0077t")]
script = ExtResource("2_iic3o")

[node name="Ground" parent="." index="0"]
metadata/_edit_lock_ = true

[node name="NavigationRegion2D" type="Node2D" parent="Ground" index="0"]

[node name="TileMap" type="TileMap" parent="Ground/NavigationRegion2D" index="0"]
tile_set = ExtResource("3_6l220")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(131072, 131077, 1, 196608, 65541, 1, 655360, 196613, 3, 851968, 262149, 2, 262145, 65541, 2, 65538, 65541, 2, 327682, 65541, 2, 655362, 262149, 2, 524293, 131077, 1, 655365, 131077, 3, 196614, 65541, 2, 262151, 131077, 2, 983048, 196613, 3, 131082, 65541, 1, 327690, 196613, 2, 655370, 196613, 1, 917514, 196613, 1, 11, 196613, 1, 524299, 262149, 1, 327692, 65541, 1, 393228, 131077, 1, 786445, 262149, 2, 196622, 196613, 3, 458767, 65541, 1, 655376, 196613, 3, 983056, 196613, 2, 524305, 196613, 2, 851985, 196613, 2, 983057, 262149, 3, 196626, 65541, 3, 262163, 65541, 3, 458771, 262149, 1, 655380, 196613, 3, 262165, 131077, 1, 589846, 65541, 3, 851990, 262149, 3, 23, 65541, 1, 655384, 65541, 2, 851992, 65541, 2, 983064, 131077, 1, 524313, 262149, 3, 0, 196613, 2, 65536, 65541, 1, 262144, 262149, 3, 327680, 262149, 2, 393216, 65541, 2, 458752, 65541, 2, 524288, 65541, 2, 589824, 196613, 1, 720896, 65541, 2, 786432, 65541, 3, 917504, 65541, 2, 983040, 131077, 2, 1048576, 196613, 2, 1, 196613, 2, 65537, 262149, 3, 131073, 131077, 1, 196609, 196613, 3, 327681, 196613, 1, 393217, 65541, 3, 458753, 131077, 3, 524289, 196613, 1, 589825, 262149, 3, 655361, 262149, 3, 720897, 196613, 1, 786433, 65541, 1, 851969, 65541, 3, 917505, 196613, 1, 983041, 196613, 1, 1048577, 196613, 1, 2, 262149, 1, 131074, 262149, 2, 196610, 131077, 1, 262146, 196613, 2, 393218, 65541, 2, 458754, 196613, 2, 524290, 262149, 2, 589826, 131077, 2, 720898, 131077, 2, 786434, 131077, 1, 851970, 65541, 2, 917506, 131077, 3, 983042, 65541, 3, 1048578, 131077, 2, 3, 131077, 1, 65539, 131077, 2, 131075, 131077, 2, 196611, 262149, 2, 262147, 196613, 1, 327683, 65541, 3, 393219, 65541, 3, 458755, 196613, 3, 524291, 65541, 2, 589827, 65541, 1, 655363, 65541, 1, 720899, 65541, 3, 786435, 65541, 1, 851971, 196613, 3, 917507, 262149, 2, 983043, 65541, 3, 1048579, 196613, 1, 4, 65541, 1, 65540, 196613, 2, 131076, 65541, 2, 196612, 131077, 3, 262148, 131077, 3, 327684, 131077, 3, 393220, 131077, 1, 458756, 131077, 2, 524292, 131077, 1, 589828, 65541, 3, 655364, 131077, 3, 720900, 65541, 1, 786436, 262149, 1, 851972, 131077, 2, 917508, 196613, 2, 983044, 262149, 2, 1048580, 131077, 3, 5, 131077, 1, 65541, 196613, 3, 131077, 131077, 3, 196613, 65541, 3, 262149, 65541, 1, 327685, 65541, 2, 393221, 262149, 2, 458757, 65541, 1, 589829, 131077, 3, 720901, 131077, 3, 786437, 131077, 3, 851973, 196613, 2, 917509, 196613, 1, 983045, 65541, 3, 1048581, 131077, 2, 6, 196613, 2, 65542, 262149, 2, 131078, 65541, 1, 262150, 131077, 1, 327686, 196613, 1, 393222, 65541, 2, 458758, 196613, 3, 524294, 65541, 2, 589830, 131077, 2, 655366, 131077, 1, 720902, 65541, 2, 786438, 65541, 3, 851974, 262149, 1, 917510, 131077, 2, 983046, 262149, 1, 1048582, 131077, 3, 7, 262149, 1, 65543, 196613, 1, 131079, 196613, 1, 196615, 196613, 1, 327687, 196613, 2, 393223, 131077, 3, 458759, 131077, 2, 524295, 65541, 3, 589831, 196613, 3, 655367, 65541, 2, 720903, 131077, 3, 786439, 131077, 3, 851975, 196613, 1, 917511, 65541, 2, 983047, 65541, 2, 1048583, 131077, 1, 8, 262149, 3, 65544, 65541, 2, 131080, 196613, 1, 196616, 196613, 2, 262152, 131077, 3, 327688, 131077, 2, 393224, 65541, 2, 458760, 65541, 1, 524296, 262149, 3, 589832, 262149, 2, 655368, 65541, 1, 720904, 262149, 3, 786440, 65541, 3, 851976, 65541, 1, 917512, 131077, 1, 1048584, 196613, 1, 9, 131077, 2, 65545, 262149, 3, 131081, 262149, 3, 196617, 196613, 3, 262153, 131077, 1, 327689, 65541, 65536, 393225, 65541, 1, 458761, 131077, 2, 524297, 196613, 2, 589833, 262149, 3, 655369, 262149, 2, 720905, 196613, 1, 786441, 262149, 2, 851977, 262149, 3, 917513, 196613, 1, 983049, 65541, 3, 1048585, 65541, 3, 10, 196613, 1, 65546, 196613, 3, 196618, 131077, 3, 262154, 262149, 1, 393226, 65541, 2, 458762, 262149, 3, 524298, 262149, 3, 589834, 131077, 3, 720906, 262149, 3, 786442, 65541, 2, 851978, 131077, 3, 983050, 65541, 1, 1048586, 65541, 1, 65547, 131077, 1, 131083, 131077, 2, 196619, 196613, 2, 262155, 196613, 1, 327691, 262149, 2, 393227, 196613, 1, 458763, 196613, 2, 589835, 196613, 2, 655371, 262149, 3, 720907, 131077, 1, 786443, 262149, 1, 851979, 131077, 3, 917515, 196613, 1, 983051, 196613, 3, 1048587, 131077, 3, 12, 262149, 3, 65548, 65541, 1, 131084, 65541, 2, 196620, 65541, 2, 262156, 65541, 3, 458764, 131077, 2, 524300, 65541, 1, 589836, 262149, 1, 655372, 196613, 3, 720908, 196613, 1, 786444, 262149, 1, 851980, 262149, 1, 917516, 65541, 1, 983052, 262149, 3, 1048588, 196613, 1, 13, 196613, 2, 65549, 262149, 3, 131085, 262149, 2, 196621, 65541, 1, 262157, 262149, 2, 327693, 196613, 1, 393229, 131077, 2, 458765, 262149, 2, 524301, 196613, 2, 589837, 131077, 1, 655373, 196613, 1, 720909, 262149, 1, 851981, 196613, 3, 917517, 131077, 3, 983053, 131077, 2, 1048589, 262149, 3, 14, 65541, 3, 65550, 131077, 2, 131086, 196613, 2, 262158, 196613, 3, 327694, 131077, 1, 393230, 262149, 2, 458766, 262149, 2, 524302, 131077, 3, 589838, 65541, 3, 655374, 196613, 1, 720910, 131077, 1, 786446, 196613, 3, 851982, 131077, 2, 917518, 262149, 3, 983054, 65541, 2, 1048590, 262149, 1, 15, 196613, 2, 65551, 262149, 2, 131087, 196613, 1, 196623, 65541, 1, 262159, 131077, 3, 327695, 65541, 3, 393231, 131077, 1, 524303, 65541, 1, 589839, 131077, 1, 655375, 262149, 1, 720911, 262149, 3, 786447, 65541, 1, 851983, 131077, 2, 917519, 65541, 1, 983055, 65541, 1, 1048591, 65541, 3, 16, 65541, 1, 65552, 131077, 2, 131088, 262149, 3, 196624, 196613, 1, 262160, 65541, 2, 327696, 196613, 1, 393232, 131077, 1, 458768, 262149, 1, 524304, 131077, 1, 589840, 131077, 1, 720912, 196613, 1, 786448, 262149, 2, 851984, 131077, 2, 917520, 65541, 2, 1048592, 196613, 2, 17, 196613, 1, 65553, 131077, 2, 131089, 65541, 3, 196625, 65541, 2, 262161, 65541, 2, 327697, 262149, 1, 393233, 65541, 1, 458769, 262149, 2, 589841, 262149, 2, 655377, 196613, 3, 720913, 262149, 1, 786449, 65541, 3, 917521, 196613, 3, 1048593, 196613, 2, 18, 131077, 3, 65554, 262149, 3, 131090, 131077, 1, 262162, 131077, 1, 327698, 65541, 2, 393234, 196613, 1, 458770, 131077, 1, 524306, 131077, 2, 589842, 131077, 2, 655378, 196613, 1, 720914, 196613, 3, 786450, 262149, 1, 851986, 131077, 2, 917522, 262149, 1, 983058, 262149, 1, 1048594, 131077, 1, 19, 65541, 2, 65555, 262149, 1, 131091, 131077, 1, 196627, 262149, 1, 327699, 131077, 2, 393235, 262149, 2, 524307, 196613, 3, 589843, 262149, 1, 655379, 196613, 2, 720915, 262149, 1, 786451, 131077, 2, 851987, 196613, 3, 917523, 196613, 1, 983059, 196613, 1, 1048595, 196613, 3, 20, 131077, 1, 65556, 65541, 2, 131092, 262149, 2, 196628, 262149, 2, 262164, 196613, 2, 327700, 65541, 3, 393236, 196613, 3, 458772, 262149, 3, 524308, 196613, 1, 589844, 131077, 1, 720916, 131077, 2, 786452, 131077, 1, 851988, 65541, 3, 917524, 262149, 2, 983060, 65541, 3, 1048596, 262149, 3, 21, 262149, 1, 65557, 65541, 3, 131093, 196613, 2, 196629, 65541, 2, 327701, 196613, 3, 393237, 262149, 3, 458773, 65541, 2, 524309, 131077, 2, 589845, 262149, 1, 655381, 196613, 3, 720917, 65541, 2, 786453, 65541, 3, 851989, 65541, 1, 917525, 131077, 1, 983061, 65541, 3, 1048597, 65541, 2, 22, 196613, 2, 65558, 262149, 3, 131094, 65541, 2, 196630, 65541, 3, 262166, 262149, 1, 327702, 65541, 1, 393238, 196613, 1, 458774, 262149, 2, 524310, 131077, 3, 655382, 196613, 1, 720918, 131077, 1, 786454, 262149, 3, 917526, 65541, 1, 983062, 262149, 3, 1048598, 131077, 2, 65559, 131077, 1, 131095, 262149, 1, 196631, 131077, 3, 262167, 262149, 3, 327703, 196613, 3, 393239, 262149, 1, 458775, 196613, 2, 524311, 65541, 1, 589847, 65541, 2, 655383, 131077, 1, 720919, 262149, 3, 786455, 196613, 3, 851991, 262149, 3, 917527, 65541, 2, 983063, 262149, 3, 1048599, 262149, 2, 24, 196613, 1, 65560, 131077, 3, 131096, 262149, 1, 196632, 262149, 2, 262168, 131077, 2, 327704, 262149, 2, 393240, 262149, 1, 458776, 65541, 2, 524312, 196613, 1, 589848, 65541, 1, 720920, 196613, 3, 786456, 196613, 3, 917528, 262149, 3, 1048600, 131077, 3, 25, 196613, 3, 65561, 262149, 1, 131097, 65541, 1, 196633, 131077, 1, 262169, 262149, 3, 327705, 131077, 3, 393241, 131077, 1, 458777, 131077, 1, 589849, 65541, 1, 655385, 131077, 1, 720921, 65541, 1, 786457, 196613, 1, 851993, 196613, 1, 917529, 262149, 3, 983065, 262149, 1, 1048601, 65541, 1, 1114112, 262149, 3, 1114113, 131077, 2, 1114114, 65541, 2, 1114115, 131077, 1, 1114116, 131077, 2, 1114117, 196613, 2, 1114118, 65541, 65536, 1114119, 262149, 3, 1114120, 262149, 1, 1114121, 196613, 3, 1114122, 196613, 1, 1114123, 65541, 2, 1114124, 131077, 3, 1114125, 262149, 1, 1114126, 131077, 3, 1114127, 65541, 1, 1114128, 65541, 2, 1114129, 196613, 2, 1114130, 65541, 65536, 1114131, 131077, 3, 1114132, 65541, 2, 1114133, 131077, 2, 1114134, 196613, 2, 1114135, 262149, 3, 1114136, 65541, 3, 1114137, 65541, 1, 1179648, 262149, 1, 1179649, 262149, 3, 1179650, 131077, 2, 1179651, 196613, 2, 1179652, 196613, 1, 1179653, 65541, 1, 1179654, 196613, 3, 1179655, 262149, 1, 1179656, 196613, 1, 1179657, 196613, 1, 1179658, 196613, 1, 1179659, 196613, 1, 1179660, 65541, 3, 1179661, 196613, 1, 1179662, 65541, 1, 1179663, 65541, 3, 1179664, 65541, 2, 1179665, 196613, 1, 1179666, 65541, 1, 1179667, 196613, 1, 1179668, 131077, 2, 1179669, 262149, 3, 1179670, 262149, 3, 1179671, 262149, 2, 1179672, 131077, 1, 1179673, 65541, 1, 1179674, 131077, 3, 1245210, 131077, 1, 1245211, 131077, 2, 1245209, 262149, 3, 1245208, 131077, 1, 1245207, 65541, 3, 1245206, 65541, 2, 1245205, 196613, 3, 1245204, 262149, 2, 1245203, 65541, 1, 1245202, 262149, 2, 1245201, 65541, 2, 1245200, 131077, 3, 1245199, 262149, 3, 1245198, 131077, 3, 1245197, 262149, 2, 1245196, 196613, 2, 1245195, 65541, 1, 1245194, 262149, 2, 1245193, 131077, 3, 1245192, 196613, 3, 1245191, 196613, 2, 1245190, 65541, 2, 1245189, 262149, 3, 1245188, 131077, 3, 1245187, 131077, 3, 1245186, 131077, 3, 1245185, 65541, 1, 1245184, 196613, 2, 1179675, 262149, 2, 1114139, 131077, 2, 1114138, 131077, 3, 1048602, 131077, 3, 1048603, 196613, 2, 983067, 262149, 2, 983066, 131077, 3, 917530, 196613, 1, 917531, 196613, 2, 851995, 196613, 3, 851994, 65541, 2, 786458, 196613, 2, 786459, 131077, 3, 720923, 196613, 2, 720922, 196613, 1, 655386, 65541, 2, 655387, 262149, 1, 589851, 196613, 2, 589850, 131077, 1, 524314, 65541, 1, 524315, 262149, 2, 458778, 131077, 3, 458779, 196613, 2, 393243, 262149, 2, 393242, 65541, 2, 327706, 65541, 3, 327707, 262149, 2, 262171, 65541, 2, 262170, 196613, 1, 196634, 196613, 3, 196635, 262149, 3, 131099, 65541, 3, 131098, 65541, 2, 65563, 196613, 3, 65562, 262149, 3, 26, 131077, 2, 27, 196613, 1, -65523, 524293, 7, -65524, 524293, 7, -131060, 524293, 7, -131059, 524293, 7, -65522, 524293, 7, -131058, 524293, 7, -131057, 524293, 7, -196596, 524293, 7, -196595, 524293, 7, -196594, 524293, 7, -196593, 524293, 7, -65530, 65541, 65536, -65518, 65541, 65536)
layer_1/name = "Walls"
layer_1/tile_data = PackedInt32Array(-65511, 262149, 0, -65512, 131077, 0, -65513, 196613, 0, -65514, 262149, 0, -65515, 196613, 65536, -65516, 65541, 65536, -65517, 65541, 65536, -65518, 262149, 65536, -65519, 262149, 0, -65520, 131077, 0, -65521, 131077, 0, -65525, 131077, 0, -65526, 65541, 0, -65527, 196613, 65536, -65528, 65541, 65536, -65529, 65541, 65536, -65530, 262149, 65536, -65531, 131077, 0, -65532, 65541, 0, -65533, 196613, 0, -65534, 65541, 0, -65535, 131077, 0, -65536, 65541, 0, -1, 5, 0, 65535, 5, 2, 131071, 5, 1, 196607, 5, 1, 262143, 5, 1, 327679, 5, 3, 393215, 5, 2, 458751, 5, 1, 524287, 5, 1, 720895, 5, 3, 786431, 5, 2, 851967, 5, 1, 917503, 5, 1, 983039, 5, 3, 1048575, 5, 2, 1114111, 5, 3, 1179647, 5, 3, -65508, 327685, 0, 28, 327685, 1, 65564, 327685, 1, 131100, 327685, 1, 196636, 327685, 1, 262172, 327685, 2, 327708, 327685, 3, 393244, 327685, 3, 458780, 327685, 3, 655388, 327685, 1, 720924, 327685, 3, 786460, 327685, 3, 851996, 327685, 2, 917532, 327685, 3, 983068, 327685, 3, 1048604, 327685, 3, 1114140, 327685, 3, 1376255, 5, 4, 1310720, 196613, 4, 1310721, 131077, 4, 1310722, 196613, 4, 1310723, 196613, 4, 1310724, 262149, 4, 1310725, 65541, 4, 1310726, 65541, 4, 1310727, 131077, 4, 1310728, 131077, 4, 1310729, 65541, 4, 1310730, 131077, 4, 1310731, 262149, 4, 1310732, 65541, 4, 1310735, 262149, 4, 1310736, 262149, 4, 1310737, 131077, 4, 1310738, 196613, 4, 1310739, 65541, 4, 1310740, 131077, 4, 1310741, 65541, 4, 1310742, 262149, 4, 1310743, 196613, 4, 1310744, 262149, 4, 1310745, 262149, 4, 1310748, 327685, 4, 1179676, 327685, 2, 1310746, 196613, 4, 1310747, 196613, 4, 1245212, 327685, 3, 1245183, 5, 3, 1310719, 5, 2, -65510, 262149, 0, -65509, 262149, 0, 917510, 5, 5, 983046, 327685, 0, 1048582, 327685, 1, 1114118, 262149, 65536, 917511, 65541, 5, 983047, 524293, 7, 1048583, 524293, 7, 1114119, 65541, 65536, 917512, 65541, 5, 983048, 524293, 7, 1048584, 524293, 7, 1114120, 65541, 65536, 917513, 196613, 5, 983049, 5, 2, 1048585, 5, 2, 1114121, 196613, 65536, 917522, 5, 5, 983058, 327685, 0, 1048594, 327685, 1, 1114130, 262149, 65536, 917523, 65541, 5, 983059, 524293, 7, 1048595, 524293, 7, 1114131, 65541, 65536, 917524, 65541, 5, 983060, 524293, 7, 1048596, 524293, 7, 1114132, 65541, 65536, 917525, 196613, 5, 983061, 5, 2, 1048597, 5, 2, 1114133, 196613, 65536, 131078, 5, 5, 196614, 327685, 0, 262150, 327685, 1, 327686, 196613, 65536, 131079, 65541, 5, 196615, 524293, 7, 262151, 524293, 7, 327687, 65541, 65536, 131080, 65541, 5, 196616, 524293, 7, 262152, 524293, 7, 327688, 65541, 65536, 131081, 196613, 5, 196617, 5, 2, 262153, 5, 2, 327689, 262149, 65536, 131090, 5, 5, 196626, 327685, 0, 262162, 327685, 1, 327698, 65541, 0, 131091, 65541, 5, 196627, 524293, 7, 262163, 524293, 7, 327699, 65541, 65536, 131092, 65541, 5, 196628, 524293, 7, 262164, 524293, 7, 327700, 65541, 65536, 131093, 196613, 5, 196629, 5, 2, 262165, 5, 2, 327701, 65541, 0, -65524, 131077, 0, 1310733, 131077, 4, 1310734, 131077, 4, 655359, 5, 2, 589823, 5, 1, 589852, 327685, 2, 524316, 327685, 3)
layer_2/name = "Objects"
layer_2/tile_data = PackedInt32Array()
metadata/_edit_group_ = true

[node name="Box" parent="Ground" index="1" instance=ExtResource("8_ehv71")]
position = Vector2(107, 96)

[node name="Box2" parent="Ground" index="2" instance=ExtResource("8_ehv71")]
position = Vector2(150, 96)

[node name="Box3" parent="Ground" index="3" instance=ExtResource("8_ehv71")]
position = Vector2(296, 96)

[node name="Box4" parent="Ground" index="4" instance=ExtResource("8_ehv71")]
position = Vector2(344, 96)

[node name="SimpleTorches" type="Node2D" parent="Ground" index="5"]
visible = false
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="SimpleTorch" parent="Ground/SimpleTorches" index="0" instance=ExtResource("7_k1tol")]
position = Vector2(128, 89)

[node name="SimpleTorch2" parent="Ground/SimpleTorches" index="1" instance=ExtResource("7_k1tol")]
position = Vector2(320, 89)

[node name="SimpleTorch3" parent="Ground/SimpleTorches" index="2" instance=ExtResource("7_k1tol")]
position = Vector2(128, 280)

[node name="SimpleTorch4" parent="Ground/SimpleTorches" index="3" instance=ExtResource("7_k1tol")]
position = Vector2(320, 280)

[node name="SimpleTorch5" parent="Ground/SimpleTorches" index="4" instance=ExtResource("7_k1tol")]
position = Vector2(128, -8)

[node name="SimpleTorch6" parent="Ground/SimpleTorches" index="5" instance=ExtResource("7_k1tol")]
position = Vector2(320, -8)

[node name="SideTorches_L" type="Node2D" parent="Ground" index="6"]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="SideTorchL" parent="Ground/SideTorches_L" index="0" instance=ExtResource("9_s5u2l")]
position = Vector2(94, 64)

[node name="SideTorchL2" parent="Ground/SideTorches_L" index="1" instance=ExtResource("9_s5u2l")]
position = Vector2(94, 256)

[node name="SideTorchL3" parent="Ground/SideTorches_L" index="2" instance=ExtResource("9_s5u2l")]
position = Vector2(286, 256)

[node name="SideTorchL4" parent="Ground/SideTorches_L" index="3" instance=ExtResource("9_s5u2l")]
position = Vector2(286, 64)

[node name="SideTorchL5" parent="Ground/SideTorches_L" index="4" instance=ExtResource("9_s5u2l")]
position = Vector2(446, 64)

[node name="SideTorchL6" parent="Ground/SideTorches_L" index="5" instance=ExtResource("9_s5u2l")]
position = Vector2(447, 257)

[node name="SideTorches_R" type="Node2D" parent="Ground" index="7"]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="SideTorchR" parent="Ground/SideTorches_R" index="0" instance=ExtResource("8_bcd0c")]
position = Vector2(162, 253)
metadata/_edit_lock_ = true

[node name="SideTorchR2" parent="Ground/SideTorches_R" index="1" instance=ExtResource("8_bcd0c")]
position = Vector2(354, 256)
metadata/_edit_lock_ = true

[node name="SideTorchR3" parent="Ground/SideTorches_R" index="2" instance=ExtResource("8_bcd0c")]
position = Vector2(162, 64)
metadata/_edit_lock_ = true

[node name="SideTorchR4" parent="Ground/SideTorches_R" index="3" instance=ExtResource("8_bcd0c")]
position = Vector2(354, 64)
metadata/_edit_lock_ = true

[node name="SideTorchR5" parent="Ground/SideTorches_R" index="4" instance=ExtResource("8_bcd0c")]
position = Vector2(2, 64)
metadata/_edit_lock_ = true

[node name="SideTorchR6" parent="Ground/SideTorches_R" index="5" instance=ExtResource("8_bcd0c")]
position = Vector2(2, 256)
metadata/_edit_lock_ = true

[node name="FrontDoor" parent="Ground" index="8" instance=ExtResource("12_k83or")]
position = Vector2(224, -8)

[node name="Items" parent="." index="1"]
metadata/_edit_lock_ = true

[node name="Position2D2" type="Marker2D" parent="Entrance" index="0"]
position = Vector2(230, 329)

[node name="Marker2D" type="Marker2D" parent="Entrance" index="1"]
position = Vector2(216, 329)

[node name="Projectiles" parent="." index="3"]
metadata/_edit_lock_ = true

[node name="Mobs" parent="." index="4"]
metadata/_edit_lock_ = true

[node name="PlayerSpawnPos" type="Marker2D" parent="PositionHelpers" index="0"]
position = Vector2(223, 269)

[node name="PlayerLastRoomPos" type="Marker2D" parent="PositionHelpers" index="1"]
position = Vector2(224, 37)

[node name="CameraHelp" type="Marker2D" parent="PositionHelpers" index="2"]
position = Vector2(-8, 328)

[node name="CameraHelp2" type="Marker2D" parent="PositionHelpers" index="3"]
position = Vector2(454, -15)

[node name="Controls" type="Area2D" parent="." index="6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Controls" index="0"]
position = Vector2(225, 157)
shape = SubResource("RectangleShape2D_6spuf")

[node name="Label" type="Label" parent="Controls" index="1"]
modulate = Color(1, 1, 1, 0)
z_index = 10
offset_left = 35.0
offset_top = 113.0
offset_right = 451.0
offset_bottom = 188.0
text = "Left Click to shoot
Right Click to throw bombs
W-A-S-D to move
Double press Esc to quit"
label_settings = SubResource("LabelSettings_sjnj5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Controls/Label" index="0"]
libraries = {
"": SubResource("AnimationLibrary_fwjkc")
}
autoplay = "Start"

[connection signal="player_entered_door" from="Ground/FrontDoor" to="." method="_on_front_door_player_entered_door"]
[connection signal="player_near_door" from="Ground/FrontDoor" to="." method="_on_front_door_player_near_door"]
[connection signal="player_not_near_door" from="Ground/FrontDoor" to="." method="_on_front_door_player_not_near_door"]
[connection signal="body_entered" from="Controls" to="." method="_on_controls_body_entered"]
[connection signal="body_exited" from="Controls" to="." method="_on_controls_body_exited"]
